WEEK 3 - Progress on Alert Generator